changed resume button in navbar to now open up my resume in a modal display PDF format, used react-pdf npm. Added logic for navigating pdf pages so you can only view the number of pages the pdf is and never go out of bounds, setup a service worker file to prevent memory leakage and pdf event now happens on seperate thread so no preformace impact on the site

--- a/src/containers/modal/popover.style.css
+++ b/src/containers/modal/popover.style.css
@@ -1,3 +1,28 @@
-.modal-btn {
-    background-color: red;
+button.btn.btn-primary {
+    padding: 0;
+    margin: 0;
+    margin-left: 7rem !important;
+    font-family: 'Inconsolata', monospace;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 16px;
+    color: black !important;
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 1);
+    padding: 10px;
+    background-color: #408CAA !important;
 }
+
+button.btn.btn-primary:hover {
+    background-color: black !important;
+    color: ghostwhite !important;
+    transform: scale(1.25);
+    transition: 0.4s;
+    border: 1px solid white;
+}
+
+.modal-title {
+    font-family: Lobster !important;
+}
+
